ci: pass env to sudo

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -18,12 +18,11 @@ task:
   env:
     VAGRANT_USER: vagrant
     VAGRANT_HOME: /home/${VAGRANT_USER}
-    RUN_AS_VAGRANT: sudo -u ${VAGRANT_USER}
-    PIP_CACHE_DIR: $VAGRANT_HOME/cache/pip
-    PATH: ${PATH}:${VAGRANT_HOME}/.local/bin
     # VENVDIR must be absolute path for 'cd && make' approach to work
     # VENVDIR should not be cached! Cirrus CI drops some binaries randomly
     VENVDIR: $VAGRANT_HOME/venv
+    SUDO_ENV: PATH=${PATH}:${VAGRANT_HOME}/.local/bin VENVDIR=${VAGRANT_HOME}/venv PIP_CACHE_DIR=${VAGRANT_HOME}/cache/pip
+    RUN_AS_VAGRANT: env ${SUDO_ENV} sudo -u ${VAGRANT_USER}
 
     # Force colored output
     PY_COLORS: '1'  # https://www.jeffgeerling.com/blog/2020/getting-colorized-output-molecule-and-ansible-on-github-actions-ci
