ci: update requirements.yml that ansible-galaxy expects

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,9 @@
 ---
-- name: trombik.sysctl
-- name: trombik.java
-- name: trombik.freebsd_pkg_repo
-- name: trombik.apt_repo
-- name: trombik.redhat_repo
-- name: trombik.x509_certificate
+roles:
+  - name: trombik.sysctl
+  - name: trombik.java
+  - name: trombik.freebsd_pkg_repo
+  - name: trombik.apt_repo
+  - name: trombik.redhat_repo
+  - name: trombik.x509_certificate
+collections: []
