--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,12 +16,13 @@ task:
     cpu: 4
 
   env:
+    VAGRANT_PROVIDER: libvirt
     VAGRANT_USER: vagrant
     VAGRANT_HOME: /home/${VAGRANT_USER}
     # VENVDIR must be absolute path for 'cd && make' approach to work
     # VENVDIR should not be cached! Cirrus CI drops some binaries randomly
     VENVDIR: $VAGRANT_HOME/venv
-    SUDO_ENV: PATH=${PATH}:${VAGRANT_HOME}/.local/bin VENVDIR=${VAGRANT_HOME}/venv PIP_CACHE_DIR=${VAGRANT_HOME}/cache/pip
+    SUDO_ENV: PATH=${PATH}:${VAGRANT_HOME}/.local/bin VENVDIR=${VAGRANT_HOME}/venv PIP_CACHE_DIR=${VAGRANT_HOME}/cache/pip VAGRANT_PROVIDER=${VAGRANT_PROVIDER}
     RUN_AS_VAGRANT: sudo -u ${VAGRANT_USER} env ${SUDO_ENV}
 
     # Force colored output
@@ -98,7 +99,7 @@ task:
     - if [ -f requirements.yml ]; then ${RUN_AS_VAGRANT} ansible-galaxy collection install -r requirements.yml -p collections; fi
 
     # run test
-    - ${RUN_AS_VAGRANT} bundle exec kitchen list
+    - ${RUN_AS_VAGRANT} bundle exec kitchen test
 
   # Debugging information
   always:
