--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -63,7 +63,7 @@ task:
     - apt-get --quiet --yes install qemu libvirt-daemon-system libvirt-clients ebtables dnsmasq-base libxslt-dev libxml2-dev libvirt-dev zlib1g-dev ruby-dev
     - useradd --user-group --groups libvirt-qemu,sudo --create-home --comment "The test user" ${VAGRANT_USER}
     - chown -R ${VAGRANT_USER}:${VAGRANT_USER} ${VAGRANT_HOME} .
-    - ${RUN_AS_VAGRANT} vagrant plugin install vagrant-libvirt
+    - ${RUN_AS_VAGRANT} vagrant plugin install --debug --verbose vagrant-libvirt
 
   setup_vagrant_script:
     - wget https://releases.hashicorp.com/vagrant/2.2.14/vagrant_2.2.14_x86_64.deb
