--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -111,6 +111,7 @@ task:
     # Create ansible.cfg with correct roles_path
     - mkdir -p extra_roles
     - printf '[defaults]\nstdout_callback = yaml\nroles_path=../:extra_roles' >ansible.cfg
+    - cat ansible.cfg
 
     # Download depended roles
     - if [ -f requirements.yml ]; then ${RUN_AS_VAGRANT} ansible-galaxy install -r requirements.yml -p extra_roles; fi
@@ -119,7 +120,6 @@ task:
     # run test
     - ${RUN_AS_VAGRANT} bundle exec kitchen list
     - ${RUN_AS_VAGRANT} bundle exec kitchen test ubuntu-1804
-    - cat /etc/ansible/ansible.cfg
     - pstree -alT
     - ps -eo ppid,pid,user,cpu,rss,stat,start,command
     - cat /var/log/libvirtd.log
