--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -103,7 +103,7 @@ task:
     # run test
     - ${RUN_AS_VAGRANT} bundle exec kitchen list
     - ${RUN_AS_VAGRANT} bundle exec env
-    - ${RUN_AS_VAGRANT} bundle exec kitchen test ubuntu-1804
+    - ${RUN_AS_VAGRANT} bundle exec kitchen test freebsd
 
   # Debugging information
   always:
