--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,7 +23,7 @@ task:
     # VENVDIR must be absolute path for 'cd && make' approach to work
     # VENVDIR should not be cached! Cirrus CI drops some binaries randomly
     VENVDIR: $VAGRANT_HOME/venv
-    SUDO_ENV: PATH=${PATH}:${VAGRANT_HOME}/.local/bin VENVDIR=${VAGRANT_HOME}/venv PIP_CACHE_DIR=${VAGRANT_HOME}/cache/pip VAGRANT_DEFAULT_PROVIDER=${VAGRANT_DEFAULT_PROVIDER}
+    SUDO_ENV: PATH=${PATH}:${VAGRANT_HOME}/.local/bin VENVDIR=${VAGRANT_HOME}/venv PIP_CACHE_DIR=${VAGRANT_HOME}/cache/pip VAGRANT_DEFAULT_PROVIDER=${VAGRANT_DEFAULT_PROVIDER} CIRRUS_REPO_NAME=${CIRRUS_REPO_NAME}
     RUN_AS_VAGRANT: sudo -u ${VAGRANT_USER} env ${SUDO_ENV}
 
     # Force colored output
