--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,7 +17,7 @@ task:
   timeout_in: 90m
 
   env:
-    VAGRANT_DEFAULT_PROVIDER: libvirt
+    VAGRANT_DEFAULT_PROVIDER: virtualbox
     VAGRANT_USER: vagrant
     VAGRANT_HOME: /home/${VAGRANT_USER}
     # VENVDIR must be absolute path for 'cd && make' approach to work
@@ -62,6 +62,14 @@ task:
     # from https://github.com/vagrant-libvirt/vagrant-libvirt
     # - apt-get build-dep vagrant ruby-libvirt
     - apt-get --quiet --yes install qemu libvirt-daemon-system bridge-utils ebtables libvirt-dev qemu-kvm qemu-utils libvirt-clients ebtables dnsmasq-base libxslt-dev libxml2-dev libvirt-dev zlib1g-dev ruby-dev
+
+    # virtualbox
+    - sudo apt-get install "linux-headers-`uname -r`"
+    - wget -q https://github.com/trombik/ansible-role-sensu_go_backend/releases/download/1.4.0/oracle_vbox_2016.asc -O - | sudo apt-key add -
+    - sudo add-apt-repository -y "deb [arch=amd64] https://download.virtualbox.org/virtualbox/debian `lsb_release -cs` contrib"
+    - sudo apt-get update
+    - sudo apt-get install virtualbox-6.1
+
     - useradd --user-group --groups libvirt-qemu,libvirt,sudo --create-home --comment "The test user" ${VAGRANT_USER}
     - chown -R ${VAGRANT_USER}:${VAGRANT_USER} ${VAGRANT_HOME} .
 
