--- a/tests/integration/example/Rakefile
+++ b/tests/integration/example/Rakefile
@@ -53,9 +53,8 @@ task :prepare_role do
   tmpfile = Tempfile.new(".tarignore")
   tmpfile.write ignore.join("\n")
   tmpfile.close
-  # rubocop:disable Metrics/LineLength
-  sh "tar -c -X #{tmpfile.path} -C #{role_dir.parent} -f - #{role_name} | " + "tar -x -C #{test_dir}/roles -f -"
-  # rubocop:enable Metrics/LineLength
+  sh "tar -c -X #{tmpfile.path} -C #{role_dir.parent} -f - #{role_name} | " \
+    + "tar -x -C #{test_dir}/roles -f -"
 end
 
 desc "vagrant up"
